--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.6.8",
     "element-plus": "^2.6.3",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
