--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "axios": "^1.6.8",
         "element-plus": "^2.6.3",
+        "jwt-decode": "^4.0.0",
         "vue": "^3.4.21",
         "vue-router": "^4.3.0",
         "vuex": "^4.0.2"
